testfx fix